# Labels

src/: CMakeLists.txt  CapitalizeTransformation.cpp  CapitalizeTransformation.h  CensorFactory.cpp  CensorFactory.h  CensorTransformation.cpp  CensorTransformation.h  CompositeTransformation.cpp  CompositeTransformation.h  CustomLabel.cpp  CustomLabel.h  CyclingTransformDecorator.cpp  CyclingTransformDecorator.h  DecorateTransformation.cpp  DecorateTransformation.h  HelpLabel.cpp  HelpLabel.h  HelpProvider.h  LabelDecorator.cpp  LabelDecorator.h  LeftTrimTransformation.cpp  LeftTrimTransformation.h  NormalizeSpaceTransformation.cpp  NormalizeSpaceTransformation.h  RandomTransformDecorator.cpp  RandomTransformDecorator.h  ReplaceTransformation.cpp  ReplaceTransformation.h  RichHelpLabel.cpp  RichHelpLabel.h  RichLabelDecorator.cpp  RichLabelDecorator.h  RichLabelProperties.h  RightTrimTransformation.cpp  RightTrimTransformation.h  SimpleHelpProvider.cpp  SimpleHelpProvider.h  TextTransformation.h  application.cpp  label.h  (+4 more)
test/: CMakeLists.txt  test-label-decorator.cpp  test-label.cpp  test-rich-label.cpp  test-transformations.cpp
